# Ballad

./: .flake8  .gitignore  .replit  README.md  requirements.txt  setup.py
.github/workflows/: lint.yml
docs/: .buildinfo  advanced-usage.html  api.html  genindex.html  index.html  installation.html  objects.inv  patch-notes.html  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_sources/: index.rst.txt  installation.rst.txt
docs/_static/: alabaster.css
docs/doctrees/: api.doctree  environment.pickle  index.doctree
docs/html/: api.html  index.html  py-modindex.html  searchindex.js
docs/html/_sources/: api.rst.txt  index.rst.txt
docs/html/_static/: haiku.css
docsrc/: advanced-usage.rst  conf.py  index.rst  patch-notes.rst  quickstart.rst
docsrc/_build/doctrees/: api.doctree  environment.pickle  index.doctree
docsrc/_build/html/: .buildinfo  genindex.html  searchindex.js
samples/: pyproject.toml
src/ballad/: __init__.py  __main__.py  core.py  depspec.py  installer.py  loader.py  tests.py  utils.py
src/ballad.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
