[tool.poetry]
name = "samples"
version = "1.0.0"
description = ""
authors = ["BD103 <dont@stalk.me>"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
flake8 = "^3.9.2"
2black = { git = "https://github.com/BD103/2black.git", branch = "main" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
